--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
+      - name: Install kagami theme
+        run: git clone https://github.com/jinkanhq/kagami-pelican themes/kagami-pelican
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup python
